--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "mysql2": "^3.10.1"
   }
